--- a/Rcode/removals/comm_discards.qmd
+++ b/Rcode/removals/comm_discards.qmd
@@ -32,60 +32,58 @@ WA_rec_fleets <- c(
 ### Commercial Fleets
 
 ```{r}
-CA_comm_twl <- c(
-  "CS - Bottom Trawl",
-  "CS EM - Bottom Trawl",
-  "Pink Shrimp",
-  "CS - Bottom and Midwater Trawl",
-  "Limited Entry Trawl"
-)
-CA_comm_nontwl <- c(
-  "CS EM - Pot",
-  "Triabl Shoreside",
-  "CS - Pot",
-  "LE Fixed Gear DTL - Hook & Line",
-  "CS - Hook & Line",
-  "LE CA Halibut"
+trawl <- c(
+  "At-Sea Hake CP", # UNSURE
+"At-Sea Hake MSCV", #UNSURE       
+"CS - Bottom Trawl",            
+"CS EM - Bottom Trawl",
+"Midwater Hake", # UNSURE                  
+"Midwater Rockfish",                 
+"Tribal Shoreside",            
+"Directed P Halibut", # GUES            
+"Midwater Rockfish EM",         
+"Pink Shrimp" ,                    
+"LE Fixed Gear DTL - Hook & Line", 
+"Midwater Hake EM"="TWL" ,        
+"CS - Bottom and Midwater Trawl",
+"Limited Entry Trawl",       
+"Tribal At-Sea Hake",         
+"Shoreside Hake",              
+"LE CA Halibut"
 )
 
-ORWA_comm_twl <- c(
-  "At-Sea Hake CP",
-  "At-Sea Hake MSCV",
-  "Midwater Hake",
-  "Midwater Rockfish",
-  "Directed P Halibut",
-  "Midwater Rockfish EM",
-  "Midwater Hake EM",
-  "Tribal At-Sea Hake"
-)
-ORWA_comm_nontwl <- c(
-  "Incidental",
-  "LE Sablefish - Hook & Line",
-  "LE Sablefish - Pot",
-  "Nearshore",
-  "OA Fixed Gear - Hook & Line",
-  "OA Fixed Gear - Pot",
-  "Shoreside Hake"
+nontrawl <- c(
+  "CS EM - Pot",                  
+"Incidental",                 
+"LE Sablefish - Hook & Line",  
+"LE Sablefish - Pot" ,
+"Nearshore" ,                    
+"OA Fixed Gear - Hook & Line" ,  
+"Research", #GUESS  
+"CS - Pot" ,            
+"CS - Hook & Line",            
+"OA Fixed Gear - Pot"
 )
 ```
 
-```{r}
-# extra
-addl_fleets <- c(
-  "Research"
-)
-```
 
 ### Combine data by fleet and area
 
 ```{r}
 recreational <- gemm |>
-  dplyr::filter(sector %in% c(CA_rec_fleets, OR_rec_fleets, WA_rec_fleets))
+  dplyr::filter(sector %in% c(CA_rec_fleets, OR_rec_fleets, WA_rec_fleets)) |>
+  dplyr::group_by(year, sector) |>
+  dplyr::summarise(tot_disc = sum(total_discard_mt))
 ```
 
 ```{r}
 commercial_gemm <- gemm |>
-  # dplyr::filter(sector %in% c(CA_comm_twl, CA_comm_nontwl, ORWA_comm_twl, ORWA_comm_nontwl)) |>
+  dplyr::filter(sector %in% c(trawl, nontrawl)) |>
+  dplyr::mutate(fleet = dplyr::case_when(
+    sector %in% trawl ~ "TWL",
+    sector %in% nontrawl ~ "NONTWL",
+    TRUE ~ NA
+  )) |>
   # dplyr::mutate(
   #   area = dplyr::case_when(
   #     sector %in% c(CA_comm_twl, CA_comm_nontwl) ~ "CA",
@@ -99,7 +97,7 @@ commercial_gemm <- gemm |>
   #   ),
   #   fleet = glue::glue("{type}-{area}")
   # ) |> 
-  dplyr::group_by(year) |> #, fleet - no longer summarizing by fleet bc we don't know which ones are for which fleet/state
+  dplyr::group_by(year, fleet) |>
   dplyr::summarise(total_discards = sum(total_discard_mt),
                    cv = max(cv))
 ```
@@ -142,7 +140,7 @@ Notes:
 
 
 ```{r}
-disdir <- file.path(getwd(), "Data","raw","nonconfidential","discards")
+disdir <- file.path("~/GitHub/Sebastes_ruberrimus_2025", "Data","raw","nonconfidential","discards")
 
 disrate_comb <- utils::read.csv(file.path(disdir, "discard_rates_combined_catch_share.csv"))
 disrate_noncatch <- utils::read.csv(file.path(disdir, "discard_rates_noncatch_share.csv"))
@@ -183,7 +181,7 @@ comb <- dplyr::left_join(chk1, chk2, by = c("year", "fleet", "catch_shares")) |>
 ```
 
 
-There is a small discrepancy in discards when combining catch share + em catch sahre and comparing them with the "combined catch share" data. We are deferring to using the combined catch share to be conservative.
+There is a small discrepancy in discards when combining catch share + em catch share and comparing them with the "combined catch share" data. We are deferring to using the combined catch share to be conservative.
 
 ### WCGOP Office Hours Notes 
 
@@ -226,24 +224,36 @@ disrate_comb
 #| eval: true
 #| echo: false
 all_noncatch <- disrate_noncatch |>
-  dplyr::group_by(year) |>
-  dplyr::summarise(total_discards = sum(obs_discard))
+  tidyr::separate_wider_delim(fleet, delim = "-", names = c("fleet", "state")) |>
+  dplyr::group_by(fleet, year) |>
+  dplyr::summarise(total_discards = sum(obs_discard)) |>
+  dplyr::mutate(fleet = dplyr::case_when(
+    fleet == "fixed" ~ "NONTWL",
+    fleet == "trawl" ~ "TWL", 
+    TRUE ~ "TWL"
+  ))
 
 non_catchshare_prop <- disrate_noncatch |>
-  dplyr::left_join(all_noncatch, by = "year") |>
+  tidyr::separate_wider_delim(fleet, delim = "-", names = c("fleet", "state")) |>
+  dplyr::mutate(fleet = dplyr::case_when(
+    fleet == "fixed" ~ "NONTWL",
+    fleet == "trawl" ~ "TWL", 
+    TRUE ~ "TWL"
+  )) |>
   # combine OR and WA fleets like the assessment and GEMM groupings
   # dplyr::mutate(fleet = dplyr::case_when(
   #                 fleet == "fixed-OR" | fleet == "fixed-WA" ~ "fixed-ORWA",
   #                 fleet == "trawl-OR" | fleet == "trawl-WA" ~ "trawl-ORWA",
   #                 TRUE ~ fleet
   #               )) |>
-  dplyr::group_by(year, fleet) |>
-  dplyr::summarise(
-    total_discards = sum(total_discards),
-    obs_discard = sum(obs_discard)
-  ) |>
+  # dplyr::group_by(year, fleet, state) |>
+  # dplyr::summarise(
+  #   # total_discards = sum(total_discards),
+  #   obs_discard = sum(obs_discard)
+  # ) |>
+  dplyr::full_join(all_noncatch, by = c("year", "fleet")) |>
   dplyr::mutate(prop_disc = obs_discard / total_discards) |>
-  dplyr::select(year, fleet, prop_disc) |>
+  dplyr::select(year, fleet, state, prop_disc) |>
   dplyr::mutate(fleet = dplyr::case_when(
     grepl("fixed", fleet) ~ stringr::str_replace(fleet, "fixed", "NONTWL"),
     grepl("trawl", fleet) ~ stringr::str_replace(fleet, "trawl", "TWL"),
@@ -251,9 +261,9 @@ non_catchshare_prop <- disrate_noncatch |>
   ))
 
 non_catchshare <- non_catchshare_prop |>
-  dplyr::left_join(commercial_gemm, by = c("year")) |> # ,"fleet"
+  dplyr::full_join(commercial_gemm, by = c("year", "fleet")) |> # ,"fleet"
   dplyr::mutate(nonshare_discard = total_discards * prop_disc) |>
-  dplyr::select(year, fleet, nonshare_discard)
+  dplyr::select(year, fleet, state, nonshare_discard)
 
 # check for reported discards from the non-catch share that dont have calc'd discards at the end
 # check only valid if lines 239-241 are run for non_catchshare
@@ -264,7 +274,7 @@ non_catchshare <- non_catchshare_prop |>
 ```{r}
 # check years for non-share data
 tidyr::pivot_wider(non_catchshare,
-                   id_cols = year,
+                   id_cols = c(year, state),
                    names_from = fleet,
                    values_from = nonshare_discard
                    ) |>
@@ -284,12 +294,14 @@ all_comm_discards <- disrate_comb |>
     grepl("trawl", fleet) ~ stringr::str_replace(fleet, "trawl", "TWL"),
     TRUE ~ fleet
   )) |>
-  dplyr::right_join(non_catchshare, by = c("year", "fleet")) |>
+  tidyr::separate_wider_delim(fleet, delim = "-", names = c("fleet", "state")) |>
+  dplyr::full_join(non_catchshare, by = c("year", "fleet", "state")) |>
   dplyr::mutate(nonshare_discard = dplyr::case_when(is.na(nonshare_discard) ~ 0,
                                                     TRUE ~ nonshare_discard),
                 observed_discard_mt = dplyr::case_when(is.na(observed_discard_mt) ~ 0,
                                                     TRUE ~ observed_discard_mt),
                 total_discards = round(observed_discard_mt + nonshare_discard, 2)) |>
+  dplyr::mutate(fleet = glue::glue("{fleet}-{state}")) |>
   dplyr::select(year, fleet, total_discards)
 
 # write.csv(all_comm_discards, file = "~/GitHub/Sebastes_ruberrimus_2025/Data/processed/discards/commercial_discards.csv")
